// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupField > should render correctly checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-4 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-11 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-15:active .emotion-24[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-15[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.125rem;
}

.emotion-19 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-21 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-23 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-23:hover {
  background-color: #d9dadd;
}

.emotion-23:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-23:focus-within,
.emotion-23:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-23[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-23[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-23[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-23[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-23[data-checked="true"]:focus-within,
.emotion-23[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-23[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-23[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-23[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-23[data-error="true"]:focus-within,
.emotion-23[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-23[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-23[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-23[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-25 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-25[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <fieldset
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-3"
          >
            <div
              class="emotion-8 emotion-3"
            >
              <legend
                class="emotion-10 emotion-11 emotion-12"
              >
                Label
              </legend>
            </div>
            <div
              class="emotion-13 emotion-3"
            >
              <label
                aria-disabled="false"
                class="emotion-15 emotion-16"
              >
                <div
                  class="emotion-17 emotion-3"
                >
                  <div
                    class="emotion-19 emotion-20"
                  >
                    <span
                      class="emotion-21 emotion-12"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="emotion-23 emotion-24"
                  data-checked="false"
                  data-disabled="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    class="emotion-25 emotion-26"
                    id="«r1»"
                    name="Group.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="emotion-15 emotion-16"
              >
                <div
                  class="emotion-17 emotion-3"
                >
                  <div
                    class="emotion-19 emotion-20"
                  >
                    <span
                      class="emotion-21 emotion-12"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="emotion-23 emotion-24"
                  data-checked="true"
                  data-disabled="false"
                  data-error="false"
                >
                  <input
                    aria-checked="true"
                    class="emotion-25 emotion-26"
                    id="«r4»"
                    name="Group.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`GroupField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-4 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-13 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-15 {
  color: #b3144d;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1rem;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-19:active .emotion-28[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-19[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.125rem;
}

.emotion-23 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-25 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-27:hover {
  background-color: #d9dadd;
}

.emotion-27:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-27:focus-within,
.emotion-27:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-27[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-27[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-27[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-27[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-27[data-checked="true"]:focus-within,
.emotion-27[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-27[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-27[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-27[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-27[data-error="true"]:focus-within,
.emotion-27[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-27[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-27[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-27[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-29 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-29[disabled] {
  cursor: not-allowed;
}

.emotion-43 {
  color: undefined;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <fieldset
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-3"
          >
            <div
              class="emotion-8 emotion-3"
            >
              <div
                class="emotion-10 emotion-3"
              >
                <legend
                  class="emotion-12 emotion-13 emotion-14"
                >
                  ToggleGroupField events
                </legend>
                <span
                  class="emotion-15 emotion-14"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="emotion-17 emotion-3"
            >
              <label
                aria-disabled="false"
                class="emotion-19 emotion-20"
              >
                <div
                  class="emotion-21 emotion-3"
                >
                  <div
                    class="emotion-23 emotion-24"
                  >
                    <span
                      class="emotion-25 emotion-14"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="emotion-27 emotion-28"
                  data-checked="false"
                  data-disabled="false"
                  data-error="true"
                >
                  <input
                    aria-checked="false"
                    class="emotion-29 emotion-30"
                    id="«r9»"
                    name="test.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="emotion-19 emotion-20"
              >
                <div
                  class="emotion-21 emotion-3"
                >
                  <div
                    class="emotion-23 emotion-24"
                  >
                    <span
                      class="emotion-25 emotion-14"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="emotion-27 emotion-28"
                  data-checked="false"
                  data-disabled="false"
                  data-error="true"
                >
                  <input
                    aria-checked="false"
                    class="emotion-29 emotion-30"
                    id="«rc»"
                    name="test.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
        <p
          class="emotion-43 emotion-14"
        >
          This field is required
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
